# Practicum_tasks

sprint1/problems/async_server/solution/src/: main.cpp
sprint1/problems/cafeteria/solution/src/: cafeteria.h  gascooker.h  hotdog.h  ingredients.h  logger.h  main.cpp  order.h
sprint1/problems/final_task/solution/src/: constants_storage.h  http_server.h  json_loader.cpp  json_loader.h  main.cpp  model.cpp  model.h  request_handler.cpp  request_handler.h
sprint1/problems/map_json/solution/src/: http_server.cpp  json_loader.h  main.cpp  model.h  request_handler.cpp
sprint1/problems/restaurant_single_threaded/solution/src/: main.cpp
sprint1/problems/sum/solution/: main.cpp
sprint1/problems/sync_server/solution/src/: main.cpp
sprint2/problems/command_line/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/command_line/solution/src/: constants_storage.h
sprint2/problems/command_line/solution/src/app/: Application.cpp  Application.h  Player.cpp  Player.h
sprint2/problems/command_line/solution/src/http_handler/: api_handler.cpp  api_handler.h  request_handler.cpp  (+1 more)
sprint2/problems/join_game/solution/: CMakeLists.txt
sprint2/problems/join_game/solution/src/app/: Application.cpp  Application.h  Player.cpp  Player.h
sprint2/problems/join_game/solution/src/http_handler/: api_handler.cpp  api_handler.h
sprint2/problems/join_game/solution/src/model/: dog.cpp  dog.h  game_session.cpp  game_session.h  model.cpp  model.h
sprint2/problems/logger/solution/: main.cpp  my_logger.cpp  my_logger.h
sprint2/problems/move_players/solution/src/: constants_storage.h  main.cpp
sprint2/problems/server_logging/solution/: CMakeLists.txt  Dockerfile
sprint2/problems/server_logging/solution/src/: constants_storage.h  http_server.h  logging_request_handler.h  main.cpp  request_handler.cpp  request_handler.h
sprint2/problems/static_content/solution/src/: http_server.cpp  main.cpp  model.h  request_handler.h
sprint2/problems/time_control/solution/: CMakeLists.txt
sprint2/problems/time_control/solution/src/: constants_storage.h
sprint3/problems/find_return/solution/: CMakeLists.txt  Dockerfile
sprint3/problems/find_return/solution/src/: constants_storage.h
sprint3/problems/find_return/solution/tests/: model_tests.cpp
sprint3/problems/flamegraph/solution/: shoot.py
sprint3/problems/gather/solution/src/: collision_detector.cpp
sprint3/problems/gather/solution/tests/: collision-detector-tests.cpp
sprint3/problems/gen_objects/solution/: CMakeLists.txt
sprint3/problems/gen_objects/solution/src/: constants_storage.h  extra_data.cpp
sprint3/problems/htmldecode/solution/tests/: htmldecode.cpp  main.cpp  tests.cpp
sprint3/problems/scores/solution/: CMakeLists.txt
sprint3/problems/scores/solution/src/: constants_storage.h
sprint3/problems/scores/solution/tests/: loot_generator_tests.cpp  model_tests.cpp
sprint3/problems/static_lib/solution/: CMakeLists.txt
sprint3/problems/static_lib/solution/src/: main.cpp
sprint3/problems/static_lib/solution/src/json_loader/: json_loader.h
sprint3/problems/static_lib/solution/src/model/: game_session.cpp  game_session.h
sprint3/problems/static_lib/solution/tests/: model_tests.cpp
sprint3/problems/stress/solution/: load.yaml
sprint3/problems/tv/solution/src/: controller.h  tv.h
sprint3/problems/tv/solution/tests/: catch_tv_tests.cpp
sprint4/problems/bookypedia-1/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/: CMakeLists.txt
sprint4/problems/bookypedia-2/solution/src/: bookypedia.cpp
sprint4/problems/db_of_books/solution/: CMakeLists.txt
sprint4/problems/db_of_books/solution/src/: books_db.cpp  books_db.h  json_parser.cpp  json_parser.h  main.cpp
sprint4/problems/leave_game/solution/: CMakeLists.txt  Dockerfile
sprint4/problems/leave_game/solution/src/: constants_storage.h  main.cpp
sprint4/problems/leave_game/solution/tests/: state-serialization-tests.cpp
sprint4/problems/state_serialization/solution/: CMakeLists.txt
sprint4/problems/state_serialization/solution/data/: state_file.txt
sprint4/problems/state_serialization/solution/src/: main.cpp
(+167 files in other folders)
